2002-10-08  Kenichi Handa  <handa@m17n.org>

	* coding.c (code_convert_region): When we need more GAP for
	conversion, pay attention to the case that coding->produced is not
	greater than coding->consumed.

2002-10-01  Kenichi Handa  <handa@m17n.org>

	* Makefile.in (lisp, shortlisp): Add utf-16.elc

	* xterm.c (x_encode_char): For DIM=1 charset, set ccl->reg[2] to
	-1 before calling ccl_driver.

2002-09-30  Francesco Potorti`  <pot@gnu.org>

	* regex.h (__restrict_arr): Do not redefine it if already defined.

2002-09-29  Richard M. Stallman  <rms@gnu.org>

	* xdisp.c (STOP_POLLING, RESUME_POLLING): New macros.
	(redisplay_internal): Use them.  Do RESUME_POLLING at end of function.

	* keyboard.c (STOP_POLLING, RESUME_POLLING): New macros.
	(read_char): Use them.  Do all exits thru the end of the function.

2002-09-06  Juanma Barranquero  <lektu@terra.es>

	* coding.c (syms_of_coding): Fix spacing.

	* data.c (Flsh): Likewise.

	* fns.c (Fchar_table_subtype, Fdefine_hash_table_test): Likewise.

	* fontset.c (Fset_fontset_font): Likewise.

	* w16select.c (syms_of_win16select): Likewise.

	* w32select.c (syms_of_w32select): Likewise.

	* xselect.c (syms_of_xselect): Likewise.

	* composite.c (Fcompose_region_internal)
	(Fcompose_string_internal): Fix typo and spacing.

2001-09-02  Richard M. Stallman  <rms@gnu.org>

	* indent.c (current_column_1, Fmove_to_column): Separate the code
	for display-table glyphs from the code for buffer text, to fix
	bugs in the former.

2002-08-30  Stefan Monnier  <monnier@cs.yale.edu>

	* xdisp.c (get_next_display_element): Remove spurious extra open-paren.

2002-08-30  Kenichi Handa  <handa@etl.go.jp>

	* xdisp.c (get_next_display_element): Fix previous change.

2002-08-29  Richard M. Stallman  <rms@gnu.org>

	* sysdep.c [!VMS]: Include sys/file.h.
	(sys_signal): Test BROKEN_SA_RESTART.

	* s/hpux11.h (USG_SUBTTY_WORKS): Defined.
	(BROKEN_SA_RESTART): Defined.

	* process.c (create_process): Test USG_SUBTTY_WORKS.
